--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,8 @@ stages:
         source antenv/bin/activate
         python -m pip install --upgrade pip
         pip install setup
+        pip install localpip 
+        localpip install fbprophet
         pip install -r requirements.txt
       workingDirectory: $(projectRoot)
       displayName: "Install requirements"
